Firefox 87.0 on Linux (CentOS 7.9) print modal not showing any print destinations other than PDF
Categories
(Core :: Printing: Setup, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox89 | --- | fixed |
People
(Reporter: ericj, Assigned: emilio)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:87.0) Gecko/20100101 Firefox/87.0
Steps to reproduce:
Firefox 87.0 on CentOS 7.9 - File --> Print (the new style print modal comes up)
Actual results:
The only destination available is Save to PDF. I have to select 'Print using the system dialog' to see my printers.
Expected results:
All of my printers should be in the destinations drop down. Note: I have 136 printers defined (via CUPS client).
I have tested Firefox nightly 89.0a1 and the problem still exists there.
I have also tested this on openSUSE Leap 15.2 and the problem does not exist there (I have 133 printers on that system).
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Printing: Output' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Updated•4 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
Hmmm, did it work on previous versions of Firefox with the tab-modal print preview? Does it work if you use the system dialog?
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 4•4 years ago
|
||
What CUPS version does that system use?
(In reply to Emilio Cobos Álvarez (:emilio) from comment #2)
Hmmm, did it work on previous versions of Firefox with the tab-modal print preview? Does it work if you use the system dialog?
On the previous version I ran (86.0), by default print.tab_modal.enabled = False. I just enabled it and when trying to print, the modal pops up, and it sits at "Preparing Preview" with nothing else in that modal. The progress spinner will spin forever.
On 87.0, if I click the 'use system dialog' link within that print modal, it brings up the system print dialog window and successfully shows all the printers as expected.
(In reply to Emilio Cobos Álvarez (:emilio) from comment #4)
What CUPS version does that system use?
cups-client-1.6.3-51.el7.x86_64
Assignee | ||
Comment 7•4 years ago
|
||
I can reproduce. I wonder if we're relying on any cups function that isn't available there... It'll take a bit since I need to set up my build environment in that machine, as builds from my regular host don't work (too modern glibc for centos), but I'll take a look.
Comment 8•4 years ago
|
||
Interestingly, I see the problem on Red Hat Enterprise 7.9 but I don't see the problem on OpenSUSE 15.2.
If it's any help, RHEL 7.9 appears to use CUPS 1.6.3 while OpenSuSE 15.2 is using CUPS 2.3.3.
Assignee | ||
Comment 9•4 years ago
|
||
Just make some functions optional and deal with them not being there.
We won't have localized media names and per-printer paper lists, but
that seems fine, it's an obvious improvement over not showing printers.
Also, add some logging so next time we need to debug something like this
we can figure out without having to rebuild.
Assignee | ||
Comment 10•4 years ago
|
||
Yep, this is because we require loading some cups 2.0+ functions. Patch incoming.
Comment 11•4 years ago
|
||
Comment 12•4 years ago
|
||
bugherder |
Description
•