Bug 1701019 - Add support for cups 1.6+ to the printing code. r=jwatt

Just make some functions optional and deal with them not being there.

We won't have localized media names and per-printer paper lists, but
that seems fine, it's an obvious improvement over not showing printers.

Also, add some logging so next time we need to debug something like this
we can figure out without having to rebuild.

Differential Revision: https://phabricator.services.mozilla.com/D110032